<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:text="@string/main_title" />
    <ImageView
        android:id="@+id/iv_main_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginVertical="28dp"
        android:src="@drawable/ic_baseline_volume_up_24"
        android:contentDescription="@string/all_sfx_icon" />
    <Button
        android:id="@+id/btn_main_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="12dp"
        android:paddingHorizontal="32dp"
        android:text="@string/main_profile_btn" />
    <Button
        android:id="@+id/btn_main_library"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="12dp"
        android:paddingHorizontal="32dp"
        android:text="@string/main_library_btn" />

</LinearLayout>