<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/teal_200"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="18dp"
        android:background="@color/purple_200"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/login_title" />
        <EditText
            android:id="@+id/et_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:padding="8dp"
            android:inputType="text"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/login_username_hint"
            android:autofillHints="" />
        <Button
            android:id="@+id/btn_login_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_next_btn" />
    </LinearLayout>

</LinearLayout>